[package]
name = "log_explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
opensearch = { version = "2", features = ["aws-auth"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-config = "1"
anyhow = "1"
url = "2"
